--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,32 +1,62 @@
-# This is a basic workflow that is manually triggered
+name: Build and Release
 
-name: Manual workflow
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
 on:
-  workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: true
-        # The data type of the input
-        type: string
+  push:
+    tags:
+      - "v*.*.*"
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+permissions:
+  contents: write
+
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+  build:
+    name: Build and Release
+    if: startsWith(github.ref, 'refs/tags/')
+    strategy:
+      matrix:
+        include:
+          - output_target: linux-x86_64
+            os: ubuntu-22.04
+            target: x86_64-unknown-linux-musl
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+          - output_target: linux-aarch64
+            os: ubuntu-22.04
+            target: aarch64-unknown-linux-musl
+            container: ghcr.io/cross-rs/aarch64-unknown-linux-musl:edge
+
+          - output_target: win-x86_64
+            os: windows-2022
+            target: x86_64-pc-windows-msvc
+            output_postfix: '.exe'
+
+          - output_target: darwin-x86_64
+            os: macOS-12
+            target: x86_64-apple-darwin
+
+          - output_target: darwin-aarch64
+            os: macOS-12
+            target: aarch64-apple-darwin
+
+    runs-on: ${{ matrix.os }}
+    container: ${{ matrix.container }}
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run build script
+        env:
+          TARGET: ${{ matrix.target }}
+          OUTPUT_TARGET: ${{ matrix.output_target }}
+        run: ./build.sh
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: ruvchain-connector-${{ matrix.output_target }}
+          path: output/*
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          draft: true
+          files: "output/*"
